# ProyectoFinalMH

./: Bird mating optimizer.odp  CMakeLists.txt
Entrega/software/: CMakeLists.txt
Entrega/software/comun/: Solution.cpp  Solution.h  bl.cpp  bl.h  utils.h
Entrega/software/resultados/: BMO.csv  Tabla Completa.xlsx
Entrega/software/src/: BMO.cpp  BMO_memetico.cpp  pruebas.cpp
comun/: Problem.cpp  Problem.h  Solution.cpp  Solution.h  bl.cpp
resultados/: BMO.csv  BMO_memetico.csv  Tabla Completa.xlsx
software/comun/: Solution.cpp  Solution.h  bl.cpp  bl.h
software/resultados/: BMB.csv  ES.csv  ILS-ES.csv  ILS.csv  Tabla Completa.xlsx  mutada.csv  primera.csv
software/src/: BMB.cpp  ES.cpp  ILS-ES.cpp  ILS.cpp
src/: BMO.cpp  pruebas.cpp
